--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@
 #DB_URL=mongodb://localhost/issuetracker
 
 # Atlas - replace UUU: user, PPP: password, XXX: hostname
-DB_URL=mongodb+srv://samk90:mongodb123@cluster0.4jgzz.mongodb.net/ecclesia
+DB_URL=mongodb+srv://samk90:revolutionary1@cluster0.4jgzz.mongodb.net/ecclesia
 
 #mLab=mongodb://UUU:PPP@XXX.mlab.com:YYY//issuetracker
 
