changes for heroku

--- a/.env
+++ b/.env
@@ -8,7 +8,7 @@ DB_URL=mongodb+srv://samk90:revolutionary1@cluster0.4jgzz.mongodb.net/ecclesia
 #mLab=mongodb://UUU:PPP@XXX.mlab.com:YYY//issuetracker
 
 ## Server Port
-API_SERVER_PORT=3000
+PORT=3000
 
 ## Enable CORS (default: true)
 # ENABLE_CORS=false
