--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "cors": "^2.8.5",
     "dotenv": "^6.2.0",
     "express": "^4.17.1",
-    "google-auth-library": "^2.0.2",
+    "google-auth-library": "^7.6.1",
     "graphql": "^0.13.2",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.3.5",
@@ -35,5 +35,8 @@
     "eslint": "^5.16.0",
     "eslint-config-airbnb-base": "^13.2.0",
     "eslint-plugin-import": "^2.23.4"
+  },
+  "optionalDependencies": {
+    "fsevents": "2.1.2"
   }
 }
